[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easy_transcriber"
version = "0.1.0"
description = "Easily transcribe audio to text using multiple TTS backends."
readme = "README.rst"
authors = [
  {name = "Evan Dempsey", email = "evandempsey@gmail.com"}
]
maintainers = [
  {name = "Evan Dempsey", email = "evandempsey@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/evandempsey/easy_transcriber/issues"
changelog = "https://github.com/evandempsey/easy_transcriber/blob/master/changelog.md"
homepage = "https://github.com/evandempsey/easy_transcriber"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

